sandbox/output
AnagramTest.java:14: error: ')' expected
        assertThat(Anagram.of("ab"), is(Arrays.asList("ab", "ba"));
                                                                  ^
AnagramTest.java:19: error: ')' expected
        assertThat(Anagram.of("abc"), is(Arrays.asList("abc", "acb", "bac", "bca", "cab", "cba"));
                                                                                                 ^
2 errors
